--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Пошаговый тренинг "МОНСТРЫ МАРКЕТИНГА 7 в 1", старт - 23 апреля 2019 года</title>
     <meta name="description" content="">
 
-    <link rel="apple-touch-icon" href="img/logo.png">
-    <!-- Place favicon.ico in the root directory -->
+    <link rel="shortcut icon" href="favicon.ico">
+    <!-- Place favicon.ico in t<link rel="shortcut icon" href="favicon.ico">he root directory -->
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&amp;subset=cyrillic" rel="stylesheet">
