--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Пошаговый тренинг "МОНСТРЫ МАРКЕТИНГА 7 в 1", старт - 23 апреля 2019 года</title>
     <meta name="description" content="">
 
-    <link rel="shortcut icon" href="favicon.ico">
-    <!-- Place favicon.ico in t<link rel="shortcut icon" href="favicon.ico">he root directory -->
+    <link rel="apple-touch-icon" href="img/logo.png">
+    <!-- Place favicon.ico in the root directory -->
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&amp;subset=cyrillic" rel="stylesheet">
@@ -6112,102 +6112,36 @@
                             </tr>
                             <tr>
                                 <td class="text-left">
-                                    <span class="big bold">Проверка Ваших Д/З</span><br/>
-
-
-                                </td>
-                                <td><i class="fa fa-times-circle" aria-hidden="true"></i></td>
-                                <td><i class="fa fa-check-circle" aria-hidden="true"></i></td>
-                                <td><i class="fa fa-check-circle" aria-hidden="true"></i></td>
-                                <td><i class="fa fa-check-circle" aria-hidden="true"></i></td>
-                            </tr>
-                            <tr>
-                                <td class="text-left">
-                                    <span class="big bold">Вебинары: доп. разборы в прямом эфире</span><br/>
-
-
-                                </td>
-                                <td><i class="fa fa-times-circle" aria-hidden="true"></i></td>
-                                <td><i class="fa fa-times-circle" aria-hidden="true"></i></td>
-                                <td><i class="fa fa-check-circle" aria-hidden="true"></i></td>
-                                <td><i class="fa fa-check-circle" aria-hidden="true"></i></td>
-                            </tr>
-                            <tr>
-                                <td class="text-left">
-                                    <span class="big bold">Доступ к защите сертификата ММ-2019</span><br/>
-
-
-                                </td>
-                                <td><i class="fa fa-times-circle" aria-hidden="true"></i></td>
-                                <td><i class="fa fa-check-circle" aria-hidden="true"></i></td>
-                                <td><i class="fa fa-check-circle" aria-hidden="true"></i></td>
-                                <td><i class="fa fa-check-circle" aria-hidden="true"></i></td>
-                            </tr>
-                            <tr>
-                                <td class="text-left">
-                                    <span class="big bold">Записи тренинга "Монстры Маркетинга 7 в 1"-2018</span><br/>
-
-
-                                </td>
-                                <td><i class="fa fa-check-circle" aria-hidden="true"></i></td>
-                                <td><i class="fa fa-check-circle" aria-hidden="true"></i></td>
-                                <td><i class="fa fa-check-circle" aria-hidden="true"></i></td>
-                                <td><i class="fa fa-check-circle" aria-hidden="true"></i></td>
-                            </tr>
-                            <!--<tr>
-									<td class="text-left">
-										<span class="big bold">Разборы от Константина Горбунова </span><br />
-										<span class="bold">Дополнительные закрытые вебинары в Мастер группе.</span><br />
-										Аудит рекламных кампаний в Яндекс Директ и Google Adwords, сайтов и Landing Page
-									</td>
-									<td><i class="fa fa-times-circle" aria-hidden="true"></i></td>
-									<td><i class="fa fa-times-circle" aria-hidden="true"></i></td>
-									<td><i class="fa fa-check-circle" aria-hidden="true"></i></td>
-									<td><i class="fa fa-check-circle" aria-hidden="true"></i></td>-->
-                            <tr>
-                                <td class="text-left">
-                                    <span class="big bold">Доступ в закрытую Мастер-группу ВКонтакте</span><br/>
-                                    <span class="bold">(пожизненный)</span><br/>
-                                    Поддерживающие вебинары с ответами на вопросы и разбором рекламных кампаний, лендингов,
-                                    сайтов (1 раз в месяц), ответы на вопросы в группе, общение с более опытными участниками
-                                </td>
-                                <td><i class="fa fa-times-circle" aria-hidden="true"></i></td>
-                                <td><i class="fa fa-check-circle" aria-hidden="true"></i></td>
-                                <td><i class="fa fa-check-circle" aria-hidden="true"></i></td>
-                                <td><i class="fa fa-check-circle" aria-hidden="true"></i></td>
-                            </tr>
-                            <tr>
-                                <td class="text-left">
                                     <span class="big bold text-red">Стоимость сегодня</span>
                                 </td>
                                 <td>
-                                    <span class="big text-red text-nowrap">21 875 руб.</span>
+                                    <span class="big text-red text-nowrap">5 875 руб.</span>
                                 </td>
                                 <td>
-                                    <span class="big text-red text-nowrap">39 375 руб.</span>
+                                    <span class="big text-red text-nowrap">10 375 руб.</span>
                                 </td>
                                 <td>
-                                    <span class="big text-red text-nowrap">56 875 руб.</span>
+                                    <span class="big text-red text-nowrap">12 875 руб.</span>
                                 </td>
                                 <td>
-                                    <span class="big text-red text-nowrap">70 000 руб.</span>
+                                    <span class="big text-red text-nowrap">15 000 руб.</span>
                                 </td>
                             </tr>
                             <tr>
                                 <td class="text-left">
-                                    <span class="big bold">Стоимость с 17 апреля</span>
+                                    <span class="big bold">Стоимость с 17 июня</span>
+                                </td>
+                                <td>
+                                    <span class="big bold text-nowrap">12 500 руб.</span>
+                                </td>
+                                <td>
+                                    <span class="big bold text-nowrap">15 500 руб.</span>
                                 </td>
                                 <td>
                                     <span class="big bold text-nowrap">22 500 руб.</span>
                                 </td>
                                 <td>
-                                    <span class="big bold text-nowrap">40 500 руб.</span>
-                                </td>
-                                <td>
-                                    <span class="big bold text-nowrap">58 500 руб.</span>
-                                </td>
-                                <td>
-                                    <span class="big bold text-nowrap">72 000 руб.</span>
+                                    <span class="big bold text-nowrap">25 000 руб.</span>
                                 </td>
                             </tr>
                             <tr>
@@ -6215,59 +6149,36 @@
                                     <span class="big bold">Cтоимость</span>
                                 </td>
                                 <td>
+                                    <span class="big bold text-nowrap">15 000 руб.</span>
+                                </td>
+                                <td>
+                                    <span class="big bold text-nowrap">22 000 руб.</span>
+                                </td>
+                                <td>
                                     <span class="big bold text-nowrap">25 000 руб.</span>
                                 </td>
                                 <td>
-                                    <span class="big bold text-nowrap">45 000 руб.</span>
-                                </td>
-                                <td>
-                                    <span class="big bold text-nowrap">65 000 руб.</span>
-                                </td>
-                                <td>
-                                    <span class="big bold text-nowrap">80 000 руб.</span>
+                                    <span class="big bold text-nowrap">30 000 руб.</span>
                                 </td>
                             </tr>
                             <tr>
-                                <td class="text-left">
-										<span class="small">Есть вопросы по оплате? Не нашли подходящий тариф?<br/>
-										Звоните +7-499-346-86-60 или пишите info@monster-marketing.ru<br/>
-										Принимаем оплату по безналу! Возможна оплата в рассрочку!</span>
-                                </td>
-                                <td>
-                                    <a class="btn btn-small btn-danger bold centered" href="https://mcontext.justclick.ru/order/mm-base-online-2019" target="_blank">Выбрать</a>
-                                </td>
-                                <td>
-                                    <a class="btn btn-small btn-danger bold centered" href="https://mcontext.justclick.ru/order/mm-standart-online-2019" target="_blank">Выбрать</a>
-                                </td>
-                                <td>
-                                    <a class="btn btn-small btn-danger bold centered" href="https://mcontext.justclick.ru/order/mm-vip-online-2019" target="_blank">Выбрать</a>
-                                </td>
-                                <td>
-                                    <a class="btn btn-small btn-danger bold centered" href="https://mcontext.justclick.ru/order/mm-platina-online-2019" target="_blank">Выбрать</a>
+                                <td class="text-right">
+                                    <td>
+                                        <a class="btn btn-small btn-danger bold centered" href="https://mcontext.justclick.ru/order/mm-base-online-2019" target="_blank">Выбрать</a>
+                                    </td>
+                                    <td>
+                                        <a class="btn btn-small btn-danger bold centered" href="https://mcontext.justclick.ru/order/mm-standart-online-2019" target="_blank">Выбрать</a>
+                                    </td>
+                                    <td>
+                                        <a class="btn btn-small btn-danger bold centered" href="https://mcontext.justclick.ru/order/mm-vip-online-2019" target="_blank">Выбрать</a>
+                                    </td>
+                                    <td>
+                                        <a class="btn btn-small btn-danger bold centered" href="https://mcontext.justclick.ru/order/mm-platina-online-2019" target="_blank">Выбрать</a>
+                                    </td>
                                 </td>
                             </tr>
-                            <!--<tr>
-									<td class="text-left">
-										<span class="big bold text-red">Льготный вариант участия</span>
-									</td>
-									<td>
-										<a class="btn btn-small btn-danger bold centered" href="https://lp.m-context.ru/mm-min/?utm_medium=landing&utm_source=mm" target="_blank">Подробнее</a>
-										</td>
-
-									<td>
-										<span class="big text-red text-nowrap">&nbsp;</span>
-									</td>
-									<td>
-										<span class="big text-red text-nowrap">&nbsp;</span>
-									</td>
-									<td>
-										<span class="big text-red text-nowrap">&nbsp;</span>
-									</td>
-								</tr>-->
                         </table>
                     </div>
-                    <!--<h4>Условия рассрочки</h4>
-                <p>Для оплаты в рассрочку внесите минимальный  платеж в течение 4-7 суток после формирования заказа (Базовый - 4 суток, 5000 руб, </p>-->
                 </div>
             </div>
         </div>
@@ -6279,7 +6190,7 @@
                 <div class="col-md-12">
                     <i class="fa fa-question-circle text-red" aria-hidden="true"></i>
                     <h4>Нужны ли какие-то дополнительные вложения?</h4>
-                    <p>3000 рублей. Программа тренинга рассчитана на то, что Вы реинвестируете полученную прибыль обратно в
+                    <p>1000 грн. Программа тренинга рассчитана на то, что Вы реинвестируете полученную прибыль обратно в
                         рекламу или работаете за счет заказчиков.</p>
                 </div>
             </div>
@@ -6302,16 +6213,8 @@
             <div class="row clearfix">
                 <div class="col-md-12">
                     <i class="fa fa-question-circle text-red" aria-hidden="true"></i>
-                    <h4>Есть ли возможность оплаты в рассрочку?</h4>
-                    <p>Да. Внесите минимальную предоплату 10000 руб. и напишите нам на почту info@monster-marketing.ru,
-                        обсудим условия рассрочки в зависимости от тарифа участия. </p>
-                </div>
-            </div>
-            <div class="row clearfix">
-                <div class="col-md-12">
-                    <i class="fa fa-question-circle text-red" aria-hidden="true"></i>
                     <h4>Удастся ли совмещать с работой или учебой?</h4>
-                    <p>Да. Вы будете получать занятия в записи и изучать в удобное для Вас время. Большинство наших
+                    <p>Да. Вы получите занятия в записи и изучать в удобное для Вас время. Большинство наших
                         студентов проходят тренинг, совмещая с работой, текущим бизнесом или учебой</p>
                 </div>
             </div>
@@ -6329,7 +6232,7 @@
                 <div class="col-md-12">
                     <i class="fa fa-question-circle text-red" aria-hidden="true"></i>
                     <h4>В каком формате будут проходить занятия?</h4>
-                    <p>Формат - онлайн-занятия 2 раза в неделю. Продолжительность - около 3-3,5 часа. ответы на вопросы в прямом эфире после каждого занятия. После обработки сразу будет доступна запись занятия.
+                    <p>Запись онлайн-занятий. Продолжительность одного видео - около 3-3,5 часа. Ответы на вопросы после каждого занятия.
                         После некоторых занятий Вы выполняете домашнее задание и присылаете нам на проверку. Сертификат выдается только после положительного результата проверки домашних заданий.
 
                     </p>
@@ -6355,8 +6258,9 @@
                 <div class="col-md-6 text-white text-center">
                     <span class="bold">Константин Горбунов</span>, Monster Context, 2013-2019 г.<br/>
                     ИП Горбунов К. В. ОГРНИП 312501834000017<br/>
-                    <i class="fa fa-envelope" aria-hidden="true"></i> info@monster-marketing.ru
+                    <i class="fa fa-envelope" aria-hidden="true"></i> info@pimpmyads.monster-marketing.ru
                     <i class="fa fa-phone" aria-hidden="true"></i> +7-499-346-86-60
+                    <i class="fa fa-phone" aria-hidden="true"></i> +380-99-324-86-60
                 </div>
                 <div class="col-md-3 text-right footer-ico">
                     <a href="https://t.me/k_gorbunov"><img src="img/footer-ico-telegram.png"/></a>
