--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Пошаговый тренинг "МОНСТРЫ МАРКЕТИНГА 7 в 1", старт - 23 апреля 2019 года</title>
+    <title>Пошаговый тренинг "МОНСТРЫ МАРКЕТИНГА 7 в 1", старт - 23 июня 2019 года</title>
     <meta name="description" content="">
 
-    <link rel="apple-touch-icon" href="img/logo.png">
+    <link rel="shortcut icon" href="favicon.ico">
     <!-- Place favicon.ico in the root directory -->
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
@@ -6164,16 +6164,16 @@
                             <tr>
                                 <td class="text-right">
                                     <td>
-                                        <a class="btn btn-small btn-danger bold centered" href="https://mcontext.justclick.ru/order/mm-base-online-2019" target="_blank">Выбрать</a>
+                                        <a class="btn btn-small btn-danger bold centered" href="https://api.fondy.eu/s/H2k6I" target="_blank">Выбрать</a>
                                     </td>
                                     <td>
-                                        <a class="btn btn-small btn-danger bold centered" href="https://mcontext.justclick.ru/order/mm-standart-online-2019" target="_blank">Выбрать</a>
+                                        <a class="btn btn-small btn-danger bold centered" href="https://api.fondy.eu/s/6cmAK7bFZpr" target="_blank">Выбрать</a>
                                     </td>
                                     <td>
-                                        <a class="btn btn-small btn-danger bold centered" href="https://mcontext.justclick.ru/order/mm-vip-online-2019" target="_blank">Выбрать</a>
+                                        <a class="btn btn-small btn-danger bold centered" href="https://api.fondy.eu/s/fEneYSQPWDS" target="_blank">Выбрать</a>
                                     </td>
                                     <td>
-                                        <a class="btn btn-small btn-danger bold centered" href="https://mcontext.justclick.ru/order/mm-platina-online-2019" target="_blank">Выбрать</a>
+                                        <a class="btn btn-small btn-danger bold centered" href="https://api.fondy.eu/s/WD4fe1" target="_blank">Выбрать</a>
                                     </td>
                                 </td>
                             </tr>
@@ -6190,7 +6190,7 @@
                 <div class="col-md-12">
                     <i class="fa fa-question-circle text-red" aria-hidden="true"></i>
                     <h4>Нужны ли какие-то дополнительные вложения?</h4>
-                    <p>1000 грн. Программа тренинга рассчитана на то, что Вы реинвестируете полученную прибыль обратно в
+                    <p>3000 рублей. Программа тренинга рассчитана на то, что Вы реинвестируете полученную прибыль обратно в
                         рекламу или работаете за счет заказчиков.</p>
                 </div>
             </div>
