--- a/index.html
+++ b/index.html
@@ -6118,9 +6118,8 @@
                     <img src="img/logo-footer.png"/>
                 </div>
                 <div class="col-md-6 text-white text-center"
-                    <i class="fa fa-envelope" aria-hidden="true"></i> Киев, ул. Юрия Ильенко, 42, офис 306
+                    <i class="fa fa-envelope" aria-hidden="true"></i>Киев, ул. Юрия Ильенко, 42, офис 306 (м. Дорогожичи)
                     <br /><i class="fa fa-envelope" aria-hidden="true"></i> marketingmonster.info@gmail.com
-                    <br /><i class="fa fa-phone" aria-hidden="true"></i> +38 (050) 592-64-12
                     <br /><i class="fa fa-phone" aria-hidden="true"></i> +38 (067) 324-46-61
                 </div>
                 <div class="col-md-3 text-right footer-ico">
