--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Пошаговый тренинг "МОНСТРЫ МАРКЕТИНГА 7 в 1", старт - 23 июня 2019 года</title>
+    <title>Пошаговый тренинг "МОНСТРЫ МАРКЕТИНГА 7 в 1"</title>
     <meta name="description" content="">
 
     <link rel="shortcut icon" href="favicon.ico">
