--- a/index.html
+++ b/index.html
@@ -5878,7 +5878,7 @@
     </section>
     <section id="tarifs">
         <div class="container">
-            <h2>Тарифныq план</h2>
+            <h2>Тарифный план</h2>
             <div class="row clearfix">
                 <div class="col-md-12">
                     <div class="table-responsive">
